<resources>
    <string name="app_name">Get Food</string>
    <string name="name">GET FOOD</string>
    <string name="btnIniciar">Iniciar</string>
    <string name="btnContinuar">Continuar</string>
    <string name="confirmarE">Código registrado con éxito</string>
    <string name="confirmarN">No se registró intentelo de nuevo</string>
    <string name="title_activity_menu">Menú</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">getfood.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Cerrar sesión</string>
    <!-- Pantalla log in -->
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="TituloInicioDeSesion">Inicio de Sesión</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_Crear">Registrate ahora</string>

    <!-- Pantalla de Registro-->
    <string name="Registrate">Registrate</string>
    <string name="NombreCompleto">Nombre completo</string>
    <string name="Correo">Correo electrónico</string>
    <string name="NombreDeUsuario">Nombre de usuario</string>
    <string name="Regresar">Regresar</string>

    <!-- Pantalla de Cuenta-->
    <string name="nombre">Nombre</string>
    <string name="correoe">Correo</string>
    <string name="usuario">Usuario</string>

    <!-- Pantalla de Menu y Registro-->
    <string name="menu_home">Inicio</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_orden">Orden</string>
    <string name="menu_gallery">Registrar código</string>
    <string name="menu_slideshow">Escanear código</string>
    <string name="menu_turno">Turno</string>
    <string name="menu_platillos">Platillos</string>
    <string name="menu_postres">Postres</string>
    <string name="menu_bebidas">Bebidas</string>
    <string name="Scan">Escanear</string>

    <!-- Pantalla Pedido-->
    <string name="Ordene_aqui">Su orden</string>
    <string name="btnOrdenar">Ordenar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_codigo">Ingresar Código</string>
    <string name="edt_codigo">Ingresa código aquí</string>

    <string name="edtEspecificaciones">Especificaciones</string>
    <string name="camara">Iniciando Cámara</string>
    <string name="btnTurno">Generar turno</string>
    <string name="historial"> Historial</string>
    <string name="Resultados"> Historial</string>

</resources>