<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/platoFuerte"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_codigo"
            android:icon="@drawable/ic_baseline_merge_type_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_codigoqr"
            android:icon="@drawable/ic_baseline_center_focus_weak_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_turno"
            android:icon="@drawable/ic_baseline_select_all_24"
            android:title="@string/menu_turno" />
    </group>
</menu>