<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodark_s"
    tools:context=".ui.orden.Orden">


    <Button
        android:id="@+id/btnOrdenar"
        android:layout_width="260dp"
        android:layout_height="57dp"
        android:layout_gravity="center|center_horizontal"
        android:background="@drawable/laouy_creame_shape"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/btnTurno"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lvLista"
        app:layout_constraintStart_toStartOf="@+id/lvLista"
        app:layout_constraintTop_toBottomOf="@+id/txtEspecificaciones"
        app:layout_constraintVertical_bias="0.178" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lvLista"
        android:layout_width="408dp"
        android:layout_height="172dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/txtEspecificaciones"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edtEspecificaciones"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvLista" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/raleway_black"
        android:gravity="center"
        android:text="@string/Ordene_aqui"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:fontFamily="@font/raleway_black"
        android:text="Vacío"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>